--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/NextStepWebs/simplemde-markdown-editor/issues"
   },
   "dependencies": {
+    "@types/codemirror": "0.0.60",
     "codemirror": "*",
     "codemirror-spell-checker": "*",
     "marked": "*"
