Revert "expermiental deps"
This reverts commit 6946591d33e098735e7bdc405bda70a64aa0331e.

--- a/package.json
+++ b/package.json
@@ -31,17 +31,16 @@
     "debug": "*",
     "eslint": "*",
     "gulp": "*",
-    "gulp-clean-css": "*",
     "gulp-concat": "*",
     "gulp-debug": "*",
     "gulp-eslint": "*",
     "gulp-header": "*",
     "gulp-jsbeautifier": "*",
+    "gulp-clean-css": "*",
     "gulp-rename": "*",
     "gulp-uglify": "*",
-    "gulp-watch": "^5.0.1",
-    "vinyl-buffer": "*",
-    "vinyl-source-stream": "*"
+    "vinyl-source-stream": "*",
+    "vinyl-buffer": "*"
   },
   "repository": {
     "type": "git",
