--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,15 @@
 {
   "rules": {
-    "indent": [
-      "error", 2
-    ],
+    "indent": ["error", 2],
     "strict": 0,
     "no-console": 0,
-    "quotes": [
-      2,
-      "double"
-    ],
-    "semi": [
-      2,
-      "always"
-    ]
+    "quotes": [2, "double"],
+    "semi": [2, "always"]
   },
   "env": {
     "browser": true,
-    "node":true
+    "node": true,
+    "es6": true
   },
   "extends": "eslint:recommended"
 }
